Added basic loading-in functionality. Need to make it accessible directly with URL.

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<ul class="nav nav-pills nav-stacked" id="blog-border">
-					<li><a href="#number-one" onclick="loadPage(numberone.html);">Test 1</a></li>
+					<li><a href="#number-one" onclick="loadPage('blogs/numberone.html');">Test 1</a></li>
 					<li><a href="">Test 2</a></li>
 					<li><a href="">Test 3</a></li>
 					<li><a href="">Test 4</a></li>
