--- a/about.html
+++ b/about.html
@@ -7,40 +7,39 @@
 	<meta name="author" content="Michael Han">
 	<link rel="shortcut icon" href="img/favicon.ico">
 
-	<title>Michael Han | About this page</title>
+	<title>Michael Han | about this page</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this page -->
-	<link href="css/style.css" rel="stylesheet">
-	<!-- Yanone Kaffeesatz font -->
-	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="assets/css/about.css" rel="stylesheet">
 </head>
 
 <body>
-	<div class="container">
-		<ul class="nav nav-tabs">
-			<li class="active"><a>michaelhan.me</a></li>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="blog.html">My blog</a></li>
-			<li><a href="contact.html">Get in contact</a></li>
-			<li class="active"><a href="about.html">About this page</a></li>
-			<li><a href="https://www.linkedin.com/pub/michael-han/32/a65/b45"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-			<li><a href="https://github.com/michael-han"><i class="fa fa-github-square"></i> GitHub</a></li>
-			<li><a href="https://bitbucket.org/michael-han"><i class="fa fa-bitbucket"></i> Bitbucket</a></li>
-		</ul>
+	<!-- Navbar -->
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">michaelhan.me</a>
+			</div>
+			
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">home</a></li>
+					<li><a href="blog.html">my blog</a></li>
+					<li class="active"><a href="">about this page</a></li>
+					<li><a href="contact.html">get in contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div><!--/.nav-collapse -->
+
+	<div class="container home">
+		<p class="lead">Nothing here yet, sorry.</p>
 	</div>
 
-	<div class="container">
-		<h1 class="home">Nothing here yet, sorry.</p>
-	</div>
-
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/script.js"></script>
+<script src="assets/js/jquery-2.1.1.min.js"></script>
+<script src="assets/js/bootstrap.js"></script>
 
 </body>
 </html>
