--- a/blog.html
+++ b/blog.html
@@ -7,39 +7,39 @@
 	<meta name="author" content="Michael Han">
 	<link rel="shortcut icon" href="img/favicon.ico">
 
-	<title>Michael Han | My blog</title>
+	<title>Michael Han | my blog</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this page -->
-	<link href="css/style.css" rel="stylesheet">
-	<!-- Yanone Kaffeesatz font -->
-	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="assets/css/blog.css" rel="stylesheet">
 </head>
 
 <body>
-	<div class="container">
-		<ul class="nav nav-tabs">
-			<li class="active"><a>michaelhan.me</a></li>
-			<li><a href="index.html">Home</a></li>
-			<li class="active"><a href="blog.html">My blog</a></li>
-			<li><a href="contact.html">Get in contact</a></li>
-			<li><a href="about.html">About this page</a></li>
-			<li><a href="https://www.linkedin.com/pub/michael-han/32/a65/b45"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-			<li><a href="https://github.com/michael-han"><i class="fa fa-github-square"></i> GitHub</a></li>
-			<li><a href="https://bitbucket.org/michael-han"><i class="fa fa-bitbucket"></i> Bitbucket</a></li>
-		</ul>
-	</div>
+	<!-- Navbar -->
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">michaelhan.me</a>
+			</div>
+			
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">home</a></li>
+					<li class="active"><a href="">my blog</a></li>
+					<li><a href="about.html">about this page</a></li>
+					<li><a href="contact.html">get in contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div><!--/.nav-collapse -->
 
-	<div class="container" id="blog">
+	<div class="container blog">
 		<div class="row">
-			<div class="col-md-3">
-				<ul class="nav nav-pills nav-stacked" id="blog-border">
-					<li><a href="#number-one" onclick="loadPage('blogs/numberone.html');">Test 1</a></li>
-					<li><a href="">Test 2</a></li>
+			<div class="col-sm-3">
+				<ul class="nav nav-pills nav-stacked" id="blog-tabs">
+					<li><a href="#intro" onclick="loadPage('intro');">Introduction</a></li>
+					<li><a href="#creating-this-page" onclick="loadPage('creating-this-page')">Creating this page</a></li>
 					<li><a href="">Test 3</a></li>
 					<li><a href="">Test 4</a></li>
 					<li><a href="">Test 5</a></li>
@@ -50,17 +50,17 @@
 				</ul>
 			</div>
 
-			<div class="col-md-9" id="blog-border">
+			<div class="col-sm-9" id="blog-border">
 				<div id="blog-content">
-					<h1><img src="img/arrow.jpg" class="img-responsive pull-left" draggable="false"> <br><br><br><br><br><br> Click one.</h1>
+					<h1><img src="assets/img/arrow.jpg" class="img-responsive pull-left" draggable="false"> <br><br><br><br><br><br> Click one.</h1>
 				</div>
 			</div>
 		</div>
 	</div>
 
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/script.js"></script>
+<script src="assets/js/jquery-2.1.1.min.js"></script>
+<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/blog.js"></script>
 
 </body>
 </html>
