Update resume and update blogs.

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">michaelhan.me</a>
 			</div>
-			
+
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">home</a></li>
@@ -40,13 +40,13 @@
 				<ul class="nav nav-pills nav-stacked" id="blog-tabs">
 					<li><a href="#intro" onclick="loadPage('intro');">Introduction</a></li>
 					<li><a href="#creating-this-page" onclick="loadPage('creating-this-page')">Creating this page</a></li>
-					<li><a href="">Test 3</a></li>
+					<!-- <li><a href="">Test 3</a></li>
 					<li><a href="">Test 4</a></li>
 					<li><a href="">Test 5</a></li>
 					<li><a href="">Test 6</a></li>
 					<li><a href="">Test 7</a></li>
 					<li><a href="">Test 8</a></li>
-					<li><a href="">Test 9</a></li>
+					<li><a href="">Test 9</a></li> -->
 				</ul>
 			</div>
 
