Refactoring files to use bower

--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 	<title>Michael Han | about this page</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/bootstrap.css" rel="stylesheet">
+	<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/about.css" rel="stylesheet">
 </head>
 
@@ -22,7 +22,7 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">michaelhan.me</a>
 			</div>
-			
+
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">home</a></li>
@@ -38,8 +38,7 @@
 		<p class="lead">Nothing here yet, sorry.</p>
 	</div>
 
-<script src="assets/js/jquery-2.1.1.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
