--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,8 @@
 	<title>Michael Han | my blog</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/bootstrap.css" rel="stylesheet">
+	<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/blog.css" rel="stylesheet">
 </head>
 
@@ -58,9 +58,9 @@
 		</div>
 	</div>
 
-<script src="assets/js/jquery-2.1.1.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/js/blog.js"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="assets/js/blog.js"></script>
 
 </body>
 </html>
