--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<title>Michael Han | home</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/bootstrap.css" rel="stylesheet">
+	<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/index.css" rel="stylesheet">
 </head>
 
@@ -22,7 +22,7 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="">michaelhan.me</a>
 			</div>
-			
+
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="">home</a></li>
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</div><!--/.nav-collapse -->
-	
+
 	<div class="container home">
 			<img src="assets/img/portrait.jpg" class="img-circle" draggable="false">
 
@@ -48,8 +48,8 @@
 		</div>
 	</div>
 
-<script src="assets/js/jquery-2.1.1.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
